{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 11,
  "lineage": "66666666-7777-8888-9999-000000000000",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "vpc-0123456789abcdef0",
            "arn": "arn:aws:ec2:us-east-1:210000000005:vpc/vpc-0123456789abcdef0",
            "tags_all": {
              "Name": "main-vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "subnet-aaa111",
            "arn": "arn:aws:ec2:us-east-1:210000000005:subnet/subnet-aaa111",
            "vpc_id": "vpc-0123456789abcdef0"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "subnet-bbb222",
            "arn": "arn:aws:ec2:us-east-1:210000000005:subnet/subnet-bbb222",
            "vpc_id": "vpc-0123456789abcdef0"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "sg-0abc123",
            "arn": "arn:aws:ec2:us-east-1:210000000005:security-group/sg-0abc123",
            "vpc_id": "vpc-0123456789abcdef0",
            "name": "app-sg"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:210000000005:loadbalancer/app/main-alb/123456",
            "arn": "arn:aws:elasticloadbalancing:us-east-1:210000000005:loadbalancer/app/main-alb/123456",
            "name": "main-alb",
            "dns_name": "main-alb-123456.us-east-1.elb.amazonaws.com",
            "subnets": [
              "subnet-aaa111",
              "subnet-bbb222"
            ],
            "security_groups": [
              "sg-0abc123"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "listener-001",
            "arn": "arn:aws:elasticloadbalancing:us-east-1:210000000005:listener/app/main-alb/123456/abcdef",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:210000000005:loadbalancer/app/main-alb/123456"
          }
        }
      ]
    }
  ]
}